# aoc2023

./: Cargo.toml  config.toml
benches/: aoc_benchmarks.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day13.rs  day14.rs  day15.rs  day16.rs  mod.rs
src/utils/: input.rs  structs.rs
